@@ -1791,11 +1791,9 @@ if ($copydir) {
 
 	# Make dest files non-world-readable and user writable, unless we don't
 	# add Apache to a group, or if the home is world-readable
-	local $tmpl = &get_template($d->{'template'});
-	local $web_user = &get_apache_user($d);
-	local @st = stat($d->{'home'});
 	local $mode = &get_domain_php_mode($d);
-	if ($tmpl->{'web_user'} ne 'none' && $web_user && ($st[2]&07) == 0) {
+	local @st = stat($d->{'home'});
+	if (&apache_in_domain_group($d) && ($st[2]&07) == 0) {
 		# Apache is a member of the domain's group, so we can make
 		# all script files non-world-readable
 		&run_as_domain_user($d, "chmod -R o-rxw ".quotemeta($copydir));
