@@ -920,3 +920,4 @@ Modified the 'View website via Webmin' feature to not munge offsite links, only 
 The number of email messages delivered per minute and the number classified as spam or viruses can now be graphed on the System Statistics page.
 Added links from the Status section of the System Information page to the Webmin modules for their particular servers, and additional stats where available.
 If a migrated domain needs features that are not supported by the system, a warning message is displayed.
+All new SSL certificate and key files how have 700 permissions, so that only the domain owner and Apache (which starts as root) can read them.
